<resources>
    <string name="app_name">ApMusiC</string>
    <string name="home_page">Home</string>
    <string name="search_page">Search</string>
    <string name="library_page">Album</string>
    <string name="account">Account</string>
    <string name="image_song">Image Song</string>
    <string name="previous">Back</string>
    <string name="playOrPause">Play</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
</resources>