<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/custom_background_main"
    android:orientation="vertical"
    tools:context=".Activity.PlaySongActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarPlaySong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:background="#00FFFFFF"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"/>

    <ImageView
        android:id="@+id/imageGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_dark_light"
        android:contentDescription="@string/account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerDiskSong"
        android:layout_width="289dp"
        android:layout_height="289dp"
        android:layout_below="@+id/toolBarPlaySong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/account" />

    <RelativeLayout
        android:id="@+id/rl_in4music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPagerDiskSong"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textViewNameSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="310dp"
            android:text="-----"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewNameArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewNameSong"
            android:layout_marginTop="8dp"
            android:maxWidth="350dp"
            android:text="---"
            android:textColor="#E4E4E4"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageviewHeart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_heart"
            android:contentDescription="Heart_love"
            android:scaleType="fitXY"/>

    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBarTime"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/rl_in4music"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:progressTint="#FFFFFF"
        android:thumb="@drawable/custom_thumb" />

    <RelativeLayout
        android:id="@+id/relativeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarTime"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textViewRunTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="#E4E4E4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTimeTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="--:--"
            android:textColor="#E8E8E8"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeTime"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonShuffle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/imageButtonPrevious"
            android:background="@null"
            android:contentDescription="random"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/shuffle" />

        <ImageButton
            android:id="@+id/imageButtonPrevious"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/imageButtonPlayOfPause"
            android:background="@null"
            android:contentDescription="@string/previous"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/previous" />

        <ImageButton
            android:id="@+id/imageButtonPlayOfPause"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/playOrPause"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/play_button" />

        <ImageButton
            android:id="@+id/imageButtonNextSong"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/imageButtonPlayOfPause"
            android:background="@null"
            android:contentDescription="@string/next"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/next_end" />

        <ImageButton
            android:id="@+id/imageButtonLoop"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/imageButtonNextSong"
            android:background="@null"
            android:contentDescription="@string/repeat"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/repeat" />
    </RelativeLayout>
</RelativeLayout>